add final files

--- a/views/form.erb
+++ b/views/form.erb
@@ -1,9 +1,9 @@
 <h1>How many vowels are missing</h1>
 
-<form action="/result">
+<form action="/results">
  <div class="form-group">
-   <label for="result">Enter a string of words:</label>
-   <input id="result" name="result" class="form-control" type="text">
+   <label for="results">Enter a string of words:</label>
+   <input id="results" name="results" class="form-control" type="text">
  </div>
  <button type="submit" class ="btn-success">Send</button>
 
